# dataspiderai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/dataspiderai/: __init__.py  __version__.py  cli.py  config.py
src/dataspiderai/agents/: __init__.py  data_agent.py  patent_agent.py  screener_agent.py
src/dataspiderai/storage/: storage_handler.py
src/dataspiderai/utils/: agents_utils.py  catalogs.py  logger.py
tests/: conftest.py  pytest.ini  test_agents_utils.py  test_cli.py  test_data_agent.py  test_data_agent_parsing.py  test_dataspiderai.py  test_force_coverage.py  test_integration.py  test_logger.py  test_patent_agent.py  test_screener_agent.py  test_storage.py  test_storage_handler.py  test_utils.py  test_version.py
tests/fixtures/: finviz_snapshot.html  patents_quantum.html  screener_page1.html
