[project]
name = "dataspiderai"
version = "0.1.0"
description = "A package for scraping economic data with multi-agents and AI."
authors = [{ name = "Jorge Valverde Albelda" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "python-dotenv>=1.0.0",
  "langchain-openai>=0.0.1",
  "playwright>=1.35.0",
  "beautifulsoup4>=4.12.0",
  "pandas>=2.0.0",
  "pyarrow>=12.0.0",
  "tenacity>=8.2.0",
  "browser-use>=0.1.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.20.0",
  "pytest-mock>=3.10.0"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[project.scripts]
dataspiderai = "dataspiderai.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
